--- a/ABC_123_DESYGN_™_(DEMIURGE)_MODELIING_AGENCY_E.ipynb
+++ b/ABC_123_DESYGN_™_(DEMIURGE)_MODELIING_AGENCY_E.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/abc123desygn/ProjectDemiurge-MODELING-AGENCY-E/blob/minor-update-3/ABC_123_DESYGN_%E2%84%A2_(DEMIURGE)_MODELIING_AGENCY_E.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/abc123desygn/ProjectDemiurge-MODELING-AGENCY-E/blob/minor-updt/ABC_123_DESYGN_%E2%84%A2_(DEMIURGE)_MODELIING_AGENCY_E.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,10 +66,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "A4Bae3VP6UsE"
+        "id": "A4Bae3VP6UsE",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
+        "#@markdown #Mount Google Drive\n",
+        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ]
@@ -87,6 +90,7 @@
         "\n",
         "from IPython.utils import capture\n",
         "import time\n",
+        "import os\n",
         "\n",
         "print('\u001b[1;32mInstalling dependencies...')\n",
         "with capture.capture_output() as cap:\n",
@@ -98,17 +102,9 @@
         "    !rm *.deb | rm *.zst | rm *.txt\n",
         "    !git clone --depth 1 --branch updt https://github.com/TheLastBen/diffusers\n",
         "    %env LD_PRELOAD=libtcmalloc.so\n",
+        "    os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
         "\n",
         "print('\u001b[1;32mDone, proceed')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "R3SsbIlxw66N"
-      },
-      "source": [
-        "# Model Download"
       ]
     },
     {
@@ -122,31 +118,24 @@
       "source": [
         "import os\n",
         "import time\n",
+        "from IPython.utils import capture\n",
         "from IPython.display import clear_output\n",
         "import wget\n",
         "\n",
-        "#@markdown - Skip this cell if you are loading a previous session that contains a trained model.\n",
+        "#@markdown #Dependencies 2\n",
         "\n",
-        "#@markdown ---\n",
-        "\n",
-        "Model_Version = \"1.5\" #@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
-        "\n",
-        "#@markdown - Choose which version to finetune.\n",
+        "Model_Version = \"1.5\" \n",
         "\n",
         "with capture.capture_output() as cap: \n",
         "  %cd /content/\n",
         "\n",
-        "#@markdown ---\n",
-        "Custom_Model_Version=\"1.5\" #@param [ \"1.5\", \"V2.1-512px\", \"V2.1-768px\"]\n",
+        "Custom_Model_Version=\"1.5\" \n",
         "\n",
-        "Path_to_HuggingFace= \"prompthero/linkedin-diffusion\" #@param {type:\"string\"}\n",
+        "Path_to_HuggingFace= \"prompthero/linkedin-diffusion\" \n",
         "\n",
-        "#@markdown - Load and finetune a model from Hugging Face, must specify if v2, use the format \"profile/model\" like : runwayml/stable-diffusion-v1-5\n",
-        "#@markdown - If the custom model is private or requires a token, create token.txt containing the token in \"Fast-Dreambooth\" folder in your gdrive.\n",
+        "CKPT_Path = \"\" \n",
         "\n",
-        "CKPT_Path = \"\" #@param {type:\"string\"}\n",
-        "\n",
-        "CKPT_Link = \"\" #@param {type:\"string\"}\n",
+        "CKPT_Link = \"\" \n",
         "\n",
         "if os.path.exists('/content/gdrive/MyDrive/Fast-Dreambooth/token.txt'):\n",
         "  with open(\"/content/gdrive/MyDrive/Fast-Dreambooth/token.txt\") as f:\n",
@@ -169,17 +158,14 @@
         "  !git lfs install --system --skip-repo\n",
         "  !git remote add -f origin  \"https://huggingface.co/runwayml/stable-diffusion-v1-5\"\n",
         "  !git config core.sparsecheckout true\n",
-        "  !echo -e \"scheduler\\ntext_encoder\\ntokenizer\\nunet\\nmodel_index.json\\n!*.safetensors\" > .git/info/sparse-checkout\n",
+        "  !echo -e \"scheduler\\ntext_encoder\\ntokenizer\\nunet\\nvae\\nmodel_index.json\\n!vae/diffusion_pytorch_model.bin\\n!*.safetensors\" > .git/info/sparse-checkout\n",
         "  !git pull origin main\n",
         "  if os.path.exists('/content/stable-diffusion-v1-5/unet/diffusion_pytorch_model.bin'):\n",
-        "    !git clone \"https://huggingface.co/stabilityai/sd-vae-ft-mse\"\n",
-        "    !mv /content/stable-diffusion-v1-5/sd-vae-ft-mse /content/stable-diffusion-v1-5/vae\n",
-        "    !rm -r /content/stable-diffusion-v1-5/.git\n",
-        "    %cd /content/stable-diffusion-v1-5\n",
+        "    !wget -q -O vae/diffusion_pytorch_model.bin https://huggingface.co/stabilityai/sd-vae-ft-mse/resolve/main/diffusion_pytorch_model.bin\n",
+        "    !rm -r .git\n",
         "    !rm model_index.json\n",
         "    time.sleep(1)    \n",
         "    wget.download('https://raw.githubusercontent.com/TheLastBen/fast-stable-diffusion/main/Dreambooth/model_index.json')\n",
-        "    !sed -i 's@\"sample_size\": 256,@\"sample_size\": 512,@g' /content/stable-diffusion-v1-5/vae/config.json  \n",
         "    %cd /content/\n",
         "    clear_output()\n",
         "    print('\u001b[1;32mDONE !')\n",
@@ -201,6 +187,7 @@
         "  !echo -e \"scheduler\\ntext_encoder\\ntokenizer\\nunet\\nvae\\nfeature_extractor\\nmodel_index.json\\n!*.safetensors\" > .git/info/sparse-checkout\n",
         "  !git pull origin main\n",
         "  !rm -r /content/stable-diffusion-v2-768/.git\n",
+        "  %cd /content/\n",
         "  clear_output()\n",
         "  print('\u001b[1;32mDONE !')\n",
         "\n",
@@ -218,6 +205,7 @@
         "  !echo -e \"scheduler\\ntext_encoder\\ntokenizer\\nunet\\nvae\\nfeature_extractor\\nmodel_index.json\\n!*.safetensors\" > .git/info/sparse-checkout\n",
         "  !git pull origin main\n",
         "  !rm -r /content/stable-diffusion-v2-512/.git\n",
+        "  %cd /content/\n",
         "  clear_output()\n",
         "  print('\u001b[1;32mDONE !')\n",
         "\n",
@@ -295,8 +283,8 @@
         "      !wget -q -O convertodiff.py https://raw.githubusercontent.com/TheLastBen/fast-stable-diffusion/main/Dreambooth/convertodiffv2.py\n",
         "      clear_output()\n",
         "      !python /content/convertodiff.py \"$CKPT_Path\" /content/stable-diffusion-custom --v2 --reference_model stabilityai/stable-diffusion-2-1\n",
-        "      if os.path.exists('/content/stable-diffusion-custom/unet/diffusion_pytorch_model.bin'):\n",
-        "        !wget -q -O /content/stable-diffusion-custom/unet/config.json https://huggingface.co/stabilityai/stable-diffusion-2-1/raw/main/unet/config.json      \n",
+        "      #if os.path.exists('/content/stable-diffusion-custom/unet/diffusion_pytorch_model.bin'):\n",
+        "        #!wget -q -O /content/stable-diffusion-custom/unet/config.json https://huggingface.co/stabilityai/stable-diffusion-2-1/raw/main/unet/config.json      \n",
         "    !rm /content/convertodiff.py\n",
         "    if os.path.exists('/content/stable-diffusion-custom/unet/diffusion_pytorch_model.bin'):\n",
         "      clear_output()\n",
@@ -335,8 +323,8 @@
         "          !wget -q -O convertodiff.py https://raw.githubusercontent.com/TheLastBen/fast-stable-diffusion/main/Dreambooth/convertodiffv2.py\n",
         "          clear_output()\n",
         "          !python /content/convertodiff.py /content/model.ckpt /content/stable-diffusion-custom --v2 --reference_model stabilityai/stable-diffusion-2-1\n",
-        "          if os.path.exists('/content/stable-diffusion-custom/unet/diffusion_pytorch_model.bin'):\n",
-        "            !wget -q -O /content/stable-diffusion-custom/unet/config.json https://huggingface.co/stabilityai/stable-diffusion-2-1/raw/main/unet/config.json          \n",
+        "          #if os.path.exists('/content/stable-diffusion-custom/unet/diffusion_pytorch_model.bin'):\n",
+        "            #!wget -q -O /content/stable-diffusion-custom/unet/config.json https://huggingface.co/stabilityai/stable-diffusion-2-1/raw/main/unet/config.json          \n",
         "        !rm /content/convertodiff.py\n",
         "        if os.path.exists('/content/stable-diffusion-custom/unet/diffusion_pytorch_model.bin'):\n",
         "          clear_output()\n",
@@ -518,8 +506,8 @@
         "    clear_output()\n",
         "    print('\u001b[1;32mSession found, loading the trained model ...')\n",
         "    !python /content/convertodiff.py \"$MDLPTH\" \"$OUTPUT_DIR\" --v2 --reference_model stabilityai/stable-diffusion-2-1\n",
-        "    if os.path.exists(OUTPUT_DIR+'/unet/diffusion_pytorch_model.bin'):\n",
-        "      !wget -q -O $OUTPUT_DIR/unet/config.json https://huggingface.co/stabilityai/stable-diffusion-2-1/raw/main/unet/config.json    \n",
+        "    #if os.path.exists(OUTPUT_DIR+'/unet/diffusion_pytorch_model.bin'):\n",
+        "      #!wget -q -O $OUTPUT_DIR/unet/config.json https://huggingface.co/stabilityai/stable-diffusion-2-1/raw/main/unet/config.json    \n",
         "  !rm /content/convertodiff.py  \n",
         "  if os.path.exists(OUTPUT_DIR+'/unet/diffusion_pytorch_model.bin'):\n",
         "    resume=True\n",
@@ -912,13 +900,13 @@
         "\n",
         "MODELT_NAME=MODEL_NAME\n",
         "\n",
-        "UNet_Training_Steps=1000 #@param{type: 'number'}\n",
-        "UNet_Learning_Rate = 5e-6 #@param [\"2e-5\",\"1e-5\",\"9e-6\",\"8e-6\",\"7e-6\",\"6e-6\",\"5e-6\", \"4e-6\", \"3e-6\", \"2e-6\"] {type:\"raw\"}\n",
+        "UNet_Training_Steps=1500 #@param{type: 'number'}\n",
+        "UNet_Learning_Rate = 2e-6 #@param [\"2e-5\",\"1e-5\",\"9e-6\",\"8e-6\",\"7e-6\",\"6e-6\",\"5e-6\", \"4e-6\", \"3e-6\", \"2e-6\"] {type:\"raw\"}\n",
         "untlr=UNet_Learning_Rate\n",
         "\n",
-        "#@markdown - These default settings are for a dataset of 10 pictures which is enough for training a face, start with 650 or lower, test the model, if not enough, resume training for 150 steps, keep testing until you get the desired output, `set it to 0 to train only the text_encoder`.\n",
+        "#@markdown - These default settings are for a dataset of 10 pictures which is enough for training a face, start with 500 or lower, test the model, if not enough, resume training for 150 steps, keep testing until you get the desired output, `set it to 0 to train only the text_encoder`.\n",
         "\n",
-        "Text_Encoder_Training_Steps=250 #@param{type: 'number'}\n",
+        "Text_Encoder_Training_Steps=350 #@param{type: 'number'}\n",
         "\n",
         "#@markdown - 200-450 steps is enough for a small dataset, keep this number small to avoid overfitting, set to 0 to disable, `set it to 0 before resuming training if it is already trained`.\n",
         "\n",
@@ -1271,11 +1259,10 @@
         "          line = ''\n",
         "      sys.stdout.write(line)\n",
         "\n",
-        "    !rm /content/srv.txt\n",
-        "    !rm /content/srvr.txt\n",
+        "    !rm /content/srv.txt /content/srvr.txt\n",
         "    %cd /content/gdrive/MyDrive/sd/stable-diffusion-webui\n",
         "\n",
-        "configf=\"--api --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --xformers --disable-console-progressbars\"\n",
+        "configf=\"--api --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --xformers --no-download-sd-model --disable-console-progressbars\"\n",
         "\n",
         "clear_output()\n",
         "\n",
